service.yml
apiVersion: v1
kind: Service
metadata:
  name: sample-k8s
spec:
  type: NodePort
#  type: LoadBalancer
  selector:
    name: sample-k8s
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
